--- a/CallerAppServer.csproj
+++ b/CallerAppServer.csproj
@@ -104,12 +104,16 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Managers\SmsRequestsManager.cs" />
     <Compile Include="Models\CallerAppBaseModel.cs" />
+    <Compile Include="Models\RequestData.cs" />
     <Compile Include="Models\RequestSmsVerification.cs" />
     <Compile Include="Models\VerifyOtpCode.cs" />
+    <Compile Include="MyConfig\ErrorsCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DictionaryUtils.cs" />
     <Compile Include="Utils\JsonUtils.cs" />
+    <Compile Include="Utils\OtpUtils.cs" />
     <Compile Include="Utils\StringUtils.cs" />
     <Compile Include="VirtualizationDB\CommandVirtualization.cs" />
     <Compile Include="VirtualizationDB\DBVirtualizationBase.cs" />
